infrastructure/kubernetes/manifests/jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - protocol: TCP
      port: 16686
      targetPort: 16686
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.49
          ports:
            - containerPort: 16686
            - containerPort: 6831
            - containerPort: 6832
            - containerPort: 5778
            - containerPort: 14268
            - containerPort: 14250
            - containerPort: 9411
